fix(padding): Fix issue where padding class was using margin property (#3271)

--- a/packages/design-system/ui/utilities/padding/_index.scss
+++ b/packages/design-system/ui/utilities/padding/_index.scss
@@ -660,33 +660,33 @@
 
 // Variable
 .slds-var-p-around_xxx-small {
-  margin: $var-spacing-xxx-small;
+  padding: $var-spacing-xxx-small;
 }
 
 .slds-var-p-around_xx-small {
-  margin: $var-spacing-xx-small;
+  padding: $var-spacing-xx-small;
 }
 
 .slds-var-p-around_x-small {
-  margin: $var-spacing-x-small;
+  padding: $var-spacing-x-small;
 }
 
 .slds-var-p-around_small {
-  margin: $var-spacing-small;
+  padding: $var-spacing-small;
 }
 
 .slds-var-p-around_medium {
-  margin: $var-spacing-medium;
+  padding: $var-spacing-medium;
 }
 
 .slds-var-p-around_large {
-  margin: $var-spacing-large;
+  padding: $var-spacing-large;
 }
 
 .slds-var-p-around_x-large {
-  margin: $var-spacing-x-large;
+  padding: $var-spacing-x-large;
 }
 
 .slds-var-p-around_xx-large {
-  margin: $var-spacing-xx-large;
+  padding: $var-spacing-xx-large;
 }
