feat(text): Add text color for destructive actions (#3263)

--- a/packages/design-system/ui/utilities/text/_index.scss
+++ b/packages/design-system/ui/utilities/text/_index.scss
@@ -147,6 +147,16 @@
 }
 
 /**
+ * @summary Color of text for destructive actions
+ *
+ * @selector .slds-text-color_destructive
+ * @modifier
+ */
+.slds-text-color_destructive {
+  color: $color-text-destructive;
+}
+
+/**
  * @summary Success color of text
  *
  * @selector .slds-text-color_success
