--- a/packages/design-system/ui/dependencies/_root.scss
+++ b/packages/design-system/ui/dependencies/_root.scss
@@ -6,7 +6,7 @@
   #{$root} {
     font-family: $font-family;
     font-size: 100%;
-    line-height: $line-height-text;
+    line-height: $var-line-height-text;
     background: $brand-background-primary;
     color: $color-text-primary;
     -webkit: {
