chore(annotations): Clean up restriction rules (#3282)
* chore(welcome-mat): clean up annotations

* chore(visual-picker): clean up annotations

* chore(vertical-tabs): clean up annotations

* chore(vertical-navigation): clean up annotations

* chore(welcome-mat): add annotations

* chore(trial-bar): clean up annotations

* chore(trees): clean up annotations

* chore(annotations): fix annotations

* chore(tooltips): Clean up annotations

* chore(annotations): remove annotation for action icon

* chore(toast): Clean up annotations

* chore(annotations): update toast and visual picker

* chore(visual-picker): revert input change

* chore(visual-picker): revert icon change

--- a/packages/design-system/ui/components/toast/_doc.scss
+++ b/packages/design-system/ui/components/toast/_doc.scss
@@ -14,7 +14,7 @@
  * @name toast
  * @selector .slds-notify_container
  * @support dev-ready
- * @category experience
+ * @category base
  * @type messaging
  * @role alert
  * @layout responsive
