--- a/packages/design-system/ui/components/visual-picker/_doc.scss
+++ b/packages/design-system/ui/components/visual-picker/_doc.scss
@@ -3,10 +3,12 @@
 
 /**
  * @summary A visual picker can be either radio buttons, checkboxes, or links that are visually enhanced.
- *
+
  * @base
  * @name visual-picker
  * @selector .slds-visual-picker, .slds-box_link
+ * @type action
+ * @category experience
  * @support dev-ready
  * @layout responsive
  */
