--- a/packages/design-system/ui/components/visual-picker/link/_index.scss
+++ b/packages/design-system/ui/components/visual-picker/link/_index.scss
@@ -2,10 +2,10 @@
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 /**
- * Checkmark that is visibily toggled when input is checked
+ * @summary Checkmark that is visibily toggled when input is checked
  *
  * @name link
  * @selector .slds-box_link
- * @restrict a
+ * @restrict .slds-box
  * @variant
  */
