--- a/packages/design-system/ui/components/visual-picker/non-coverable-content/_index.scss
+++ b/packages/design-system/ui/components/visual-picker/non-coverable-content/_index.scss
@@ -2,7 +2,7 @@
 // Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 /**
- * Checkmark that is visibily toggled when input is checked
+ * @summary Checkmark that is visibily toggled when input is checked
  *
  * @name non-coverable-content
  * @selector .slds-visual-picker__text-check
