--- a/packages/design-system/ui/components/welcome-mat/_doc.scss
+++ b/packages/design-system/ui/components/welcome-mat/_doc.scss
@@ -14,5 +14,8 @@
  * @base
  * @name welcome-mat
  * @selector .slds-welcome-mat
+ * @category feature
+ * @type process
+ * @role modal-dialog
  * @support dev-ready
  */
