--- a/packages/design-system/ui/components/trees/_doc.scss
+++ b/packages/design-system/ui/components/trees/_doc.scss
@@ -7,6 +7,8 @@
  * @base
  * @name trees
  * @selector .slds-tree_container
+ * @category experience
+ * @type navigation
  * @support dev-ready
  * @s1 false
  * @scroller
