--- a/packages/design-system/ui/components/vertical-navigation/list/_index.scss
+++ b/packages/design-system/ui/components/vertical-navigation/list/_index.scss
@@ -14,11 +14,12 @@
 }
 
 /**
- * Modifer to reduce spacing between navigation items
- *
+ * @name compact
+ * @summary Modifer to reduce spacing between navigation items
  * @selector .slds-nav-vertical_compact
  * @restrict .slds-nav-vertical
  * @modifier
+ * @group spacing
  */
 .slds-nav-vertical_compact {
 
@@ -29,11 +30,12 @@
 }
 
 /**
- * Modifier to adjust list item when vertical navigation is sitting on top of a shaded background
- *
+ * @name shade
+ * @summary Modifier to adjust list item when vertical navigation is sitting on top of a shaded background
  * @selector .slds-nav-vertical_shade
  * @restrict .slds-nav-vertical
  * @modifier
+ * @group color
  */
 .slds-nav-vertical_shade {
 
@@ -55,8 +57,7 @@
 }
 
 /**
- * Section title of the vertical navigation
- *
+ * @summary Section title of the vertical navigation
  * @selector .slds-nav-vertical__title
  * @restrict .slds-nav-vertical h2, .slds-nav-vertical legend
  */
@@ -74,8 +75,7 @@
 }
 
 /**
- * List of the vertical navigation
- *
+ * @summary List of the vertical navigation
  * @selector .slds-nav-vertical__item
  * @restrict .slds-nav-vertical li, .slds-nav-vertical span
  */
@@ -94,8 +94,7 @@
 }
 
 /**
- * Actionable element inside of vertical navigation list item
- *
+ * @summary Actionable element inside of vertical navigation list item
  * @selector .slds-nav-vertical__action
  * @restrict .slds-nav-vertical a, .slds-nav-vertical button, .slds-nav-vertical label
  */
@@ -136,11 +135,12 @@
 }
 
 /**
- * Active state of a list item within a vertical navigation
- *
+ * @name item-active
+ * @summary Active state of a list item within a vertical navigation
  * @selector .slds-is-active
  * @restrict .slds-nav-vertical__item
  * @modifier
+ * @group interactions
  */
 .slds-nav-vertical__item.slds-is-active {
 
