--- a/packages/design-system/ui/components/vertical-tabs/base/_index.scss
+++ b/packages/design-system/ui/components/vertical-tabs/base/_index.scss
@@ -7,7 +7,6 @@
  * can be added with a modifier class on the link elements.
  *
  * @summary Renders a vertical tablist.
- *
  * @name base
  * @selector .slds-vertical-tabs
  * @restrict div, section
@@ -22,7 +21,6 @@
 
 /**
  * @summary Tab navigation container element
- *
  * @selector .slds-vertical-tabs__nav
  * @restrict .slds-vertical-tabs > ul
  */
@@ -34,7 +32,6 @@
 
 /**
  * @summary Tab navigation item
- *
  * @selector .slds-vertical-tabs__nav-item
  * @restrict .slds-vertical-tabs__nav li
  */
@@ -50,7 +47,6 @@
 
 /**
  * @summary Tab Navigation Link
- *
  * @selector .slds-vertical-tabs__link
  * @restrict .slds-vertical-tabs__nav-item a
  */
@@ -72,7 +68,6 @@
 
 /**
  * @summary Tab Content Container
- *
  * @selector .slds-vertical-tabs__content
  * @restrict .slds-vertical-tabs div
  */
@@ -83,12 +78,13 @@
 }
 
 /**
+ * @name item-active
  * @summary Active state for a tab navigation item
- *
  * @selector .slds-is-active
  * @restrict .slds-vertical-tabs__nav-item
  * @notes Required on the `<li>` element that is associated with the current active tab
  * @modifier
+ * @group interactions
  */
 .slds-vertical-tabs__nav-item.slds-is-active {
   margin-right: -1px;
@@ -103,11 +99,12 @@
 }
 
 /**
+ * @name item-focus
  * @summary Focus state for a tab navigation item
- *
  * @selector .slds-has-focus
  * @restrict .slds-vertical-tabs__nav-item
  * @modifier
+ * @group interactions
  */
 .slds-vertical-tabs__nav-item.slds-has-focus {
   text-decoration: underline;
